<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        style="@style/Platform.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                app:title="Edit Profile"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>


        <ProgressBar
            android:id="@+id/progressCricular"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="NewApi" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout">


            <LinearLayout
                android:id="@+id/ProfileLayout"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_profile_default" />

                <TextView
                    android:id="@+id/changeProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Change Profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout

                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_full_name"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email_hint"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textViewEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"

                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/auth_phone_number"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonEditProfile"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/save_profile"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <!-- Image Cropper fill the remaining available height -->
                </LinearLayout>

                <com.theartofdev.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cropImageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>